--- a/reports/html-reports/cucumber-html-reports/overview-steps.html
+++ b/reports/html-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Tekarch Cucumber</td>
         <td>1</td>
-      <td>29 Nov 2025, 15:21</td>
+      <td>07 Dec 2025, 17:31</td>
     </tr>
   </tbody>
 </table>
@@ -115,69 +115,77 @@ $(document).ready(function() {
         <tbody>
             <tr>
               <td class="location">com.cucumber.steps.Steps.teardown(io.cucumber.java.Scenario)</td>
-              <td>1</td>
-              <td class="duration" data-value="444441000">0.444</td>
-              <td class="duration" data-value="444441000">0.444</td>
-              <td class="duration" data-value="444441000">0.444</td>
+              <td>4</td>
+              <td class="duration" data-value="608351750">0.608</td>
+              <td class="duration" data-value="608351750">1.082</td>
+              <td class="duration" data-value="2433407000">2.433</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_click_on(java.lang.String)</td>
-              <td>4</td>
-              <td class="duration" data-value="4584653250">4.584</td>
-              <td class="duration" data-value="4584653250">12.486</td>
-              <td class="duration" data-value="18338613000">18.338</td>
+              <td>8</td>
+              <td class="duration" data-value="3677437000">3.677</td>
+              <td class="duration" data-value="3677437000">13.675</td>
+              <td class="duration" data-value="29419496000">29.419</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_click_on_verify_button(java.lang.String)</td>
               <td>1</td>
-              <td class="duration" data-value="21314687000">21.314</td>
-              <td class="duration" data-value="21314687000">21.314</td>
-              <td class="duration" data-value="21314687000">21.314</td>
+              <td class="duration" data-value="21543577000">21.543</td>
+              <td class="duration" data-value="21543577000">21.543</td>
+              <td class="duration" data-value="21543577000">21.543</td>
+              <td class="passed">100.00%</td>
+            </tr>
+            <tr>
+              <td class="location">com.cucumber.steps.Steps.user_enter_into_textbox(java.lang.String,java.lang.String)</td>
+              <td>5</td>
+              <td class="duration" data-value="1745397600">1.745</td>
+              <td class="duration" data-value="1745397600">3.322</td>
+              <td class="duration" data-value="8726988000">8.726</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_is_on(java.lang.String)</td>
-              <td>1</td>
-              <td class="duration" data-value="44293000">0.044</td>
-              <td class="duration" data-value="44293000">0.044</td>
-              <td class="duration" data-value="44293000">0.044</td>
+              <td>4</td>
+              <td class="duration" data-value="4608250">0.004</td>
+              <td class="duration" data-value="4608250">0.013</td>
+              <td class="duration" data-value="18433000">0.018</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_launch_the_application()</td>
-              <td>1</td>
-              <td class="duration" data-value="10879473000">10.879</td>
-              <td class="duration" data-value="10879473000">10.879</td>
-              <td class="duration" data-value="10879473000">10.879</td>
+              <td>4</td>
+              <td class="duration" data-value="10316218500">10.316</td>
+              <td class="duration" data-value="10316218500">14.549</td>
+              <td class="duration" data-value="41264874000">41.264</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_read_the_data_and_enter_the_value_to(java.lang.String,java.lang.String)</td>
               <td>2</td>
-              <td class="duration" data-value="1303919500">1.303</td>
-              <td class="duration" data-value="1303919500">2.069</td>
-              <td class="duration" data-value="2607839000">2.607</td>
+              <td class="duration" data-value="1294359500">1.294</td>
+              <td class="duration" data-value="1294359500">2.023</td>
+              <td class="duration" data-value="2588719000">2.588</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">com.cucumber.steps.Steps.user_verify_the_text(java.lang.String,java.lang.String)</td>
-              <td>1</td>
-              <td class="duration" data-value="1876422000">1.876</td>
-              <td class="duration" data-value="1876422000">1.876</td>
-              <td class="duration" data-value="1876422000">1.876</td>
+              <td>4</td>
+              <td class="duration" data-value="2102391250">2.102</td>
+              <td class="duration" data-value="2102391250">3.907</td>
+              <td class="duration" data-value="8409565000">8.409</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
         <tfoot class="total">
           <tr>
-            <td>7</td>
-            <td>11</td>
-            <td class="duration">5.045</td>
-            <td class="duration">21.314</td>
-            <td class="duration">55.505</td>
+            <td>8</td>
+            <td>32</td>
+            <td class="duration">3.575</td>
+            <td class="duration">41.264</td>
+            <td class="duration">1:54.405</td>
             <td>Totals</td>
           </tr>
         </tfoot>
